ingress-nginx/1-default-backend/ingress-1.yaml
kind: Ingress
apiVersion: networking.k8s.io/v1beta1
metadata:
  name: products-1
  namespace: default
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  backend:
    serviceName: my-service-3
    servicePort: 8080
  rules:
    - http:
        paths:
          - path: /
            backend:
              serviceName: my-service-1
              servicePort: 8080
    - host: localhost-2
      http:
        paths:
          - path: /products
            backend:
              serviceName: my-service-2
              servicePort: 8080
    - host: localhost-2
      http:
        paths:
          - path: /products/not
            backend:
              serviceName: service-not-found
              servicePort: 8080
